...
  "dateFrom": "from",
  "dateTo": "to",
  "dateBetweenDays": "to",
  "dateStarting": "Starting",
  "dateLast": "Last",
  "dateUntil": "Until",
  "feedFilterAll": "All",
  "feedFilterPending": "Pending",
  "feedFilterApproved": "Approved",
  "feedFilterRejected": "Rejected",
  "feedEmptyAll": "No events available",
  "feedEmptyPending": "No events pending approval",
  "feedEmptyApproved": "No approved events",
  "feedEmptyRejected": "No rejected events",
  "feedEventManagement": "Event Management",
  "feedTitle": "Title",
  "feedLocation": "Location",
  "feedSGDate": "SG Date",
  "feedSGExternalLink": "SG External link",
  "feedCreateEvent": "Create an event",
  "feedUseExistingTicketing": "Use an existing ticketing",
  "feedUseExistingTicketingRequiresManageEventsPermission": "The \"Manage ticket events\" permission in MyEmpay is required to use this option.",
  "feedSelectTicketing": "Select a ticketing",
  "feedPleaseSelectTicketing": "Please select an existing ticketing",
  "feedNotification": "Send a notification",
  "feedPleaseSelectAnAssociation": "Please select an association",
  "feedReject": "Reject",
  "feedApprove": "Approve",
  "feedEnded": "Ended",
  "feedOngoing": "Ongoing",
  "feedFilter": "Filter",
  "feedAssociation": "Association",
  "feedAssociationEvent": "{name} event",
  "@feedAssociationEvent": {
...
    "placeholders": {
      "name": {
        "type": "String"
      }
    }
  },
  "feedEditEvent": "Edit event",
  "feedManageAssociationEvents": "Manage association events",
  "feedNews": "Calendar",
  "feedNewsType": "News type",
  "feedNoAssociationEvents": "No association events",
  "feedApply": "Apply",
  "feedAdmin": "Administration",
...
  "adminDeleteGroupConfirmation": "Are you sure you want to delete this group?",
  "adminDeleteSchool": "Delete school?",
  "adminDeleteUsers": "Delete users",
  "adminDeleting": "Deleting",
  "adminDeletingError": "Error while deleting",
  "adminDescription": "Description",
  "adminEdit": "Edit",
  "adminEditAssociation": "Edit association : {associationName}",
  "@adminEditAssociation": {
    "description": "Edit association",
    "placeholders": {
      "associationName": {
        "type": "String"
...
  "adminEditStructure": "Edit structure",
  "adminEmailFailed": "Unable to send email to the following addresses",
  "adminEmailRegex": "Email Regex",
  "adminEmptyDate": "Empty date",
  "adminEmptyFieldError": "Name cannot be empty",
  "adminEmptyUser": "Empty user",
  "adminEndDate": "End date",
  "adminEndDateMaximal": "Maximum end date",
  "adminEndDateMinimal": "Minimum end date",
  "adminError": "Error",
  "adminFailedToDeleteGroup": "Failed to delete group",
  "adminFailedToInviteUsers": "Failed to invite users",
  "adminFailedToSendNotification": "Failed to send notification",
...
  "adminSendNotificationToGroup": "Send notification to group",
  "adminShortId": "Short ID (3 letters)",
  "adminShortIdError": "Short ID must be 3 characters",
  "adminSiegeAddress": "Head office address",
  "adminSiret": "SIRET",
  "adminSiretError": "SIRET must be 14 digits",
  "adminStartDate": "Start date",
  "adminStartDateMaximal": "Maximum start date",
  "adminStartDateMinimal": "Minimum start date",
  "adminStreet": "Street and number",
  "adminStructures": "Structures",
  "adminTitle": "Title",
  "adminTooHeavyLogo": "Logo too heavy, maximum size is 4MB",
...
  "bookingAddedManager": "Manager added",
  "bookingAddedRoom": "Room added",
  "bookingAddingError": "Error while adding",
  "bookingAddManager": "Add manager",
  "bookingAddRoom": "Add room",
  "bookingAdminPage": "Admin",
  "bookingAllDay": "All day",
  "bookingBookedFor": "Booked for",
  "bookingBooking": "Booking",
  "bookingBookingCreated": "Booking created",
  "bookingBookingDemand": "Booking request",
  "bookingBookingNote": "Booking note",
  "bookingBookingPage": "Booking",
...
  "eventHistory": "History",
  "eventIncorrectOrMissingFields": "Some fields are incorrect or missing",
  "eventInterval": "Interval",
  "eventInvalidDates": "End date must be after start date",
  "eventInvalidIntervalError": "Please enter a valid interval",
  "eventLocation": "Location",
  "eventModifiedEvent": "Event modified",
  "eventModifyingError": "Error while modifying",
  "eventMyEvents": "My events",
  "eventName": "Name",
  "eventNext": "Next",
  "eventNo": "No",
  "eventNoCurrentEvent": "No current event",
  "eventNoDateError": "Please enter a date",
...
      "url": {
        "type": "String"
      }
    }
  },
  "othersVersion": "Version",
  "paiementAccept": "Accept",
  "paiementAccessPage": "Access the page",
  "paiementAdd": "Add",
  "paiementAddedSeller": "Seller added",
  "paiementAddFunds": "Add Funds",
  "paiementAddingSellerError": "Error while adding seller",
  "paiementAddingStoreError": "Error while adding the store",
...
    "placeholders": {
      "quantity": {
        "type": "int"
      }
    }
  },
  "paiementLastTransactions": "Latest transactions",
  "paiementLimitedTo": "Limited to",
  "paiementLinkedAssociation": "Linked association",
  "paiementManagement": "Management",
  "paiementManageEvents": "Manage ticket events",
  "paiementManageSellers": "Manage sellers",
  "paiementMarkPaid": "Mark as paid",
...
  "paiementMarkUnpaid": "Mark as unpaid",
  "paiementMaxAmount": "The maximum wallet amount is",
  "paiementMean": "Average: ",
  "paiementModify": "Edit",
  "paiementModifyingStoreError": "Error while updating the store",
  "paiementModifySuccessfully": "Successfully modified",
  "paiementNewCGU": "New Terms of Service",
  "paiementNext": "Next",
  "paiementNextAccountable": "Next responsible",
  "paiementNoAssociation": "No association",
  "paiementNoInvoiceToCreate": "No invoice to create",
  "paiementNoMembership": "No membership",
  "paiementNoMembershipDescription": "This product is not available to non-members. Confirm the payment?",
...
  "paiementPaymentRequestError": "Error processing payment request",
  "paiementPaymentRequestRefused": "Payment request refused",
  "paiementPaymentSuccessful": "Payment successful!",
  "paiementPayWithHA": "Pay with HelloAsso",
  "ticketsHelloAssoPersonalLinkWarning": "The payment link is personal and must not be shared.",
  "paiementPending": "Pending",
  "paiementPersonalBalance": "Personal balance",
  "paiementPleaseAcceptPopup": "Please allow popups",
  "paiementPleaseAcceptTOS": "Please accept the Terms of Service.",
  "paiementPleaseAddDevice": "Please add this device to pay",
  "paiementPleaseAuthenticate": "Please authenticate",
  "paiementPleaseEnterMinAmount": "Please enter an amount greater than 1",
  "paiementPleaseEnterValidAmount": "Please enter a valid amount",
...
  "paiementSellerError": "You are not a seller of this store",
  "paiementSellerRigths": "Seller rights",
  "paiementSellersOf": "Sellers of",
  "paiementSettings": "Settings",
  "paiementSpent": "Spent",
  "paiementStats": "Stats",
  "paiementStoreBalance": "Store balance",
  "paiementStoreDeleted": "Store deleted",
  "paiementStoreName": "Store name",
  "paiementStores": "Stores",
  "paiementStructureAdmin": "Structure administrator",
  "paiementStructureManagement": "{structure} management",
  "@paiementStructureManagement": {
...
